<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.example.tweetapp</groupId>
    <artifactId>twitter-clone</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <groupId>com.example.tweetapp</groupId>
  <artifactId>twitter-clone-common</artifactId>
  <version>1.0-SNAPSHOT</version>
  <dependencies>
    <dependency>
      <groupId>com.codenameone</groupId>
      <artifactId>codenameone-core</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.codenameone</groupId>
      <artifactId>coderad-lib</artifactId>
      <version>2.0-SNAPSHOT</version>
      <type>pom</type>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>1.0.0</version>
        <executions>
          <execution>
            <phase>initialize</phase>
            <goals>
              <goal>read-project-properties</goal>
            </goals>
            <configuration>
              <files>
                <file>${basedir}/codenameone_settings.properties</file>
              </files>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.codenameone</groupId>
        <artifactId>codenameone-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>generate-gui-sources</id>
            <phase>process-sources</phase>
            <goals>
              <goal>generate-gui-sources</goal>
            </goals>
          </execution>
          <execution>
            <id>cn1-process-classes</id>
            <phase>process-classes</phase>
            <goals>
              <goal>compliance-check</goal>
              <goal>css</goal>
            </goals>
          </execution>
          <execution>
            <id>attach-test-artifact</id>
            <phase>test</phase>
            <goals>
              <goal>attach-test-artifact</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>install-codenameone</id>
      <activation>
        <file>
          <missing>${user.home}/.codenameone/guibuilder.jar</missing>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
              <execution>
                <phase>validate</phase>
                <goals>
                  <goal>run</goal>
                </goals>
                <configuration>
                  <target name="install-cn1">
                    <available file="${user.home}/.codenameone/guibuilder.jar" property="codenameone.present" />
                    <mkdir dir="${user.home}/.codenameone" />
                    <mkdir dir="${project.build.directory}/codenameone/tmpProject" />
                    <get skipexisting="true" src="https://www.codenameone.com/files/updates/UpdateCodenameOne.jar" dest="${user.home}/UpdateCodenameOne.jar" />
                    <java fork="true" jar="${user.home}/UpdateCodenameOne.jar">
                      <arg value="${project.build.directory}/codenameone/tmpProject" />
                      <arg value="force" />
                    </java>
                  </target>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>kotlin</id>
      <activation>
        <file>
          <exists>${basedir}/src/main/kotlin</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0.0</version>
            <executions>
              <execution>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/codenameone_settings.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-plugin</artifactId>
            <version>${kotlin.version}</version>
            <executions>
              <execution>
                <id>compile</id>
                <goals>
                  <goal>compile</goal>
                </goals>
                <configuration>
                  <sourceDirs>
                    <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                    <sourceDir>${project.basedir}/src/main/java</sourceDir>
                  </sourceDirs>
                </configuration>
              </execution>
              <execution>
                <id>test-compile</id>
                <goals>
                  <goal>test-compile</goal>
                </goals>
                <configuration>
                  <sourceDirs>
                    <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                    <sourceDir>${project.basedir}/src/test/java</sourceDir>
                  </sourceDirs>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <properties>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
        <kotlin.version>1.3.72</kotlin.version>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-stdlib</artifactId>
          <version>${kotlin.version}</version>
        </dependency>
        <dependency>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
          <version>13.0</version>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>javase</id>
      <activation>
        <property>
          <name>codename1.platform</name>
          <value>javase</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <configuration>
              <executable>java</executable>
              <longClasspath>true</longClasspath>
              <arguments>
                <argument>-XX:MaxPermSize=128M</argument>
                <argument>-Xmx1024M</argument>
                <argument>-classpath</argument>
                <classpath />
                <argument>${exec.mainClass}</argument>
                <argument>${cn1.mainClass}</argument>
              </arguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <properties>
        <codename1.targetPlatform>javase</codename1.targetPlatform>
      </properties>
    </profile>
    <profile>
      <id>simulator</id>
      <properties>
        <codename1.targetPlatform>javase</codename1.targetPlatform>
      </properties>
    </profile>
    <profile>
      <id>ios-debug</id>
      <properties>
        <codename1.targetPlatform>ios</codename1.targetPlatform>
        <codename1.targetType>iphone</codename1.targetType>
      </properties>
    </profile>
    <profile>
      <id>ios-release</id>
      <properties>
        <codename1.production>true</codename1.production>
        <codename1.appStoreBuild>true</codename1.appStoreBuild>
        <codename1.targetPlatform>ios</codename1.targetPlatform>
        <codename1.targetType>iphone</codename1.targetType>
      </properties>
    </profile>
    <profile>
      <id>javascript</id>
      <properties>
        <codename1.targetPlatform>javascript</codename1.targetPlatform>
        <codename1.targetType>javascript</codename1.targetType>
      </properties>
    </profile>
    <profile>
      <id>android</id>
      <properties>
        <codename1.targetPlatform>android</codename1.targetPlatform>
        <codename1.targetType>android</codename1.targetType>
      </properties>
    </profile>
    <profile>
      <id>uwp</id>
      <properties>
        <codename1.targetPlatform>win</codename1.targetPlatform>
        <codename1.targetType>windows</codename1.targetType>
      </properties>
    </profile>
    <profile>
      <id>windows</id>
      <properties>
        <codename1.targetPlatform>javase</codename1.targetPlatform>
        <codename1.targetType>desktop_windows</codename1.targetType>
      </properties>
    </profile>
    <profile>
      <id>mac</id>
      <properties>
        <codename1.targetPlatform>javase</codename1.targetPlatform>
        <codename1.targetType>desktop_macosx</codename1.targetType>
      </properties>
    </profile>
  </profiles>
</project>
